changed color of .required because of color contrast issues

--- a/styles/form.css
+++ b/styles/form.css
@@ -94,7 +94,7 @@ fieldset {
 }
 
 .required {
-  color: red;
+  color: darkred;
 }
 
 /* --------- Review Stars ---------- */
